Add future flag to increase jslinux compatibility

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="../js-linux/vm_files/style.css" type="text/css" rel="stylesheet"/>
         <link href="style.css" type="text/css" rel="stylesheet"/>
         <script>
+            window.jslinuxdisabledownloadprogress = true;
             window.jslinuxskiphandlers = true;
             window.jslinuxoverrideparams = "?url=" + window.location.protocol + "//cyber.meme.tips/js-linux/vm_files/buildroot-x86.cfg";
             console.log(window.jslinuxoverrideparams);
