Add ID to button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </script>
     </head>
     <body>
-        <div id="header">JOutguess - online outguess check <div style="display: inline;float: right;"><button onclick="joutguess.toggle_console()">access terminal</button></div></div>
+        <div id="header">JOutguess - online outguess check <div style="display: inline;float: right;"><button id="console-button" onclick="joutguess.toggle_console()">access terminal</button></div></div>
         <div id="term_wrap" style="display:none">
             <div id="term_container">
             </div>
